--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -26,12 +26,11 @@
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Description</h5>
             {% include "new_description.html" %}
         </div>
-    {% include 'resources.html' %}
-       
+    {% include 'resources.html' with resources=resources %}       
 
-   <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Updates</h5>
+   <h5 class="mb-2 p-4 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Updates</h5>
 
-   {% include 'commentsection.html' with comment=followers %}
+   {% include 'commentsection.html' with comments=comments %}
    <button type="button" hx-get="/card/{{id}}/delete"  hx-target="#drawer" class=" my-4 focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Delete Card</button>
 
     </div>
