--- a/src/card_interactions/templates/typecomment.html
+++ b/src/card_interactions/templates/typecomment.html
@@ -1,4 +1,4 @@
-{% include 'comment.html' with comments=comments%}
+{% include 'comment.html' with comments=comments id=id %}
 
 <form class="p-4">
     <div class="p-4 w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
