--- a/src/users/templates/password_reset_completed.html
+++ b/src/users/templates/password_reset_completed.html
@@ -9,8 +9,9 @@
       <div>
         <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Password reset succesfully</h1>
         <p>Log in to your account</p>
-        <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Log in</button>
-
+        <a href="/user/login">
+          <button class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Log in</button>
+       </a>
       </div>
       
     </div>
