--- a/src/users/templates/password_reset_form.html
+++ b/src/users/templates/password_reset_form.html
@@ -1,20 +1,34 @@
 {% extends "base.html" %}
+{% block title %}Reset password{% endblock %}
 
-{% block title %}Reset password {% endblock %}
 {% block content %}
-
 
 <div class="flex min-h-full items-center justify-center py-40 px-4 sm:px-6 lg:px-8 bg">
     <div class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow">
       <div>
-        <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Reset password</h1>
+        <h1 class="mt-6 text-center text-3xl font-bold tracking-tight text-gray-800">Reset your password</h1>
       </div>
       <form class="mt-8 space-y-6" action="#" method="POST">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Reset password</button>
+        <input type="hidden" name="remember" value="true">
+        <div class="-space-y-px rounded-md shadow-sm">
+          {% csrf_token %}
+          {{form}}
+        </div>
+  
 
+  
+        <div>
+          <button type="submit" class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-700 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+            <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+              <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+              </svg>
+            </span>
+            Send password reset email
+          </button>
+        </div>
       </form>
     </div>
   </div>
+
 {% endblock %}
