added field updates to userprofile

--- a/src/users/templates/user_profile_table_edit.html
+++ b/src/users/templates/user_profile_table_edit.html
@@ -45,6 +45,6 @@
             </div>
   </dd>
 </dl>
-<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Save profile</button>
+<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Save</button>
   </form> 
   
