--- a/src/card_interactions/templates/new_description.html
+++ b/src/card_interactions/templates/new_description.html
@@ -1,4 +1,6 @@
 <div hx-target="this"  hx-swap="outerHTML" class="justify-between">
+    <div hx-get="/card/{{ id }}/edit/description">
     <p >{{ description }}</p>
-    <button hx-get="/card/{{ id }}/edit/description" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit title</button>
+    </div>
+    <button hx-get="/card/{{ id }}/edit/description" class="px-3 py-2 my-2 text-xs font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">edit description</button>
 </div>
