--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -18,7 +18,9 @@
 	{% tailwind_preload_css %}
 	{% tailwind_css %}
 	<link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+	<!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />-->
+	<link href="https://fonts.googleapis.com/css?family=Lexend">
+
 	<!--Fontawesome-->
 	<!--Favicons-->
 	<link rel="apple-touch-icon" sizes="57x57" href="{% static '/images/favicons/apple-icon-57x57.png' %}">
