--- a/src/dashboard/templates/dashboard_index.html
+++ b/src/dashboard/templates/dashboard_index.html
@@ -19,7 +19,7 @@
   <input id="large-range" min="1" max="10" value='10' step="1" onchange="showVal(this.value)" type="range" class="w-40 h-3 bg-gray-200 rounded-lg appearance-none cursor-pointer range-lg dark:bg-gray-700"/>
 --> 
 <div class="h-[600px]" style="display: inline-block"></div>
-  {% include 'grid1.html' with cards=cards %}
+  {% include 'grid.html' with cards=cards %}
 </div>
 </main>
 
