--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -70,11 +70,11 @@
 <div class="container flex flex-wrap items-center justify-between mx-auto">
 	{% if user.is_authenticated%}
 	<a href="/dashboard" class="flex items-center">
-		<img src="{% static '/images/logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
+		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
 	{% else %}
 	<a href="/" class="flex items-center">
-		<img src="{% static '/images/logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
+		<img src="{% static '/images/mapmaker_logo.png' %}" class="h-6 mr-3 sm:h-9" alt="mapmaker Logo" />
 	</a>
 	
 	{% endif %}
